--- a/webapp/view/CreateSession.view.xml
+++ b/webapp/view/CreateSession.view.xml
@@ -1,11 +1,12 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:ssms="ssms.control.uploadcollection" controllerName="ssms.controller.CreateSession"
-	xmlns:f="sap.ui.layout.form" xmlns:html="http://www.w3.org/1999/xhtml">
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:ssms="ssms.control.uploadcollection"
+	controllerName="ssms.controller.CreateSession" xmlns:f="sap.ui.layout.form" xmlns:html="http://www.w3.org/1999/xhtml">
 	<Page showHeader="false">
 		<subHeader>
 			<core:Fragment fragmentName="ssms.view.Header" type="XML"/>
 		</subHeader>
 		<content>
-			<f:SimpleForm width="95%" id="ssmsCreateSession-Session" class="sapUiMediumMargin" title="{i18n>TITLE_CREATESESSION_NEWSESSION}" editable="true" layout="ResponsiveGridLayout">
+			<f:SimpleForm width="95%" id="ssmsCreateSession-Session" class="sapUiMediumMargin" title="{i18n>TITLE_CREATESESSION_NEWSESSION}"
+				editable="true" layout="ResponsiveGridLayout">
 				<f:content>
 					<Label text="{i18n>LABEL_CREATESESSION_CREATEDBY}"/>
 					<Text text="{UserModel>/displayName}"/>
@@ -15,7 +16,8 @@
 						<RadioButton text="{i18n>BTN_CREATESESSION_PRIVATE}"/>
 					</RadioButtonGroup>
 					<Label text="{i18n>LABEL_CREATESESSION_TOPIC}"/>
-					<Input id="ssmsCreateSession-Topic" class="ssmsInput" value="{/topic}" placeholder="{i18n>TEXT_CREATESESSION_TOPICPLACEHOLDER}" change="onCheckTopic"/>
+					<Input id="ssmsCreateSession-Topic" class="ssmsInput" value="{/topic}" placeholder="{i18n>TEXT_CREATESESSION_TOPICPLACEHOLDER}"
+						change="onCheckTopic"/>
 					<!--<Label/>-->
 					<!--<MessageStrip id="topicEmptyMsg" text="Please enter the Topic" type="Error" showIcon="true" visible="false"/>-->
 					<Label text="{i18n>LABEL_CREATESESSION_CATEGORY}"/>
@@ -27,7 +29,8 @@
 						</items>
 					</Select>
 					<Label text="{i18n>LABEL_CREATESESSION_TIME}"/>
-					<DatePicker id="ssmsCreateSession-Date" class="ssmsInput" displayFormat="short" dateValue="{/meetingTime}" change="onCheckDate"/>
+					<DatePicker id="ssmsCreateSession-Date" class="ssmsInput" valueFormat="yyyy-MM-dd HH:mm:ss" displayFormat="short" dateValue="{/meetingTime}"
+						change="onCheckDate"/>
 					<!--<Label/>-->
 					<!--<MessageStrip id="dateValidMsg" text="Please enter a valid Planned Date" type="Error" showIcon="true" visible="false"/>-->
 					<Label/>
@@ -36,14 +39,15 @@
 					<Label text="{i18n>LABEL_CREATESESSION_DESCRIPTION}"/>
 					<TextArea placeholder="{i18n>TEXT_CREATESESSION_DESCRIPTIONPLACEHODER}" value="{/description}"/>
 					<Label text="{i18n>LABEL_CREATESESSION_ATTACHMENT}"/>
-					<ssms:SSMSUploadCollection id="ssmsCreateSession-UploadCollection" multiple="true" instantUpload="false" uploadComplete="onUploadComplete" />
+					<ssms:SSMSUploadCollection id="ssmsCreateSession-UploadCollection" multiple="true" instantUpload="false" uploadComplete="onUploadComplete"/>
 				</f:content>
 			</f:SimpleForm>
 		</content>
 		<footer>
 			<Bar>
 				<contentRight>
-					<Button id="ssmsCreateSession-Create" class="ssmsEmphasizedButton" type="Emphasized" text="{i18n>BTN_CREATESESSION_CREATE}" press="onPressCreate"/>
+					<Button id="ssmsCreateSession-Create" class="ssmsEmphasizedButton" type="Emphasized" text="{i18n>BTN_CREATESESSION_CREATE}"
+						press="onPressCreate"/>
 					<Button text="{i18n>BTN_CREATESESSION_CANCEL}" press="onPressCancel"/>
 				</contentRight>
 			</Bar>
