--- a/webapp/view/SessionDetail.view.xml
+++ b/webapp/view/SessionDetail.view.xml
@@ -1,4 +1,4 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:uxap="sap.uxap"
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:uxap="sap.uxap" xmlns:ssms="ssms.control.uploadcollection"
 	controllerName="ssms.controller.SessionDetail" xmlns:f="sap.ui.layout.form" xmlns:l="sap.ui.layout"
 	xmlns:html="http://www.w3.org/1999/xhtml">
 	<Page showHeader="false">
@@ -19,7 +19,7 @@
 										<l:content>
 											<HBox alignItems="End" justifyContent="End">
 												<Button icon="sap-icon://action" type="Transparent" tooltip="Send notification to supporter" press="onSendSession"/>
-												<Button id="ssms-editBtn" icon="sap-icon://edit" type="Transparent" press="onEditSession" />
+												<Button id="ssms-editBtn" icon="sap-icon://edit" type="Transparent" press="onEditSession"/>
 												<layoutData>
 													<l:GridData span="L12 M12 S12"/>
 												</layoutData>
@@ -29,7 +29,7 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Text text="{/owner}"/>
+											<Text text="{UserModel>/displayName}"/>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_CATEGORY}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
@@ -47,7 +47,7 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Text text="{/meetingRoom}"/>
+											<Text id="ssms-location" text="{/meetingRoom}"/>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_STATUS}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
@@ -59,7 +59,7 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Text text="{path:'/meetingTime',formatter:'ssms.util.formatter.formatDateTime'}"/>
+											<Text id="ssms-editdatatime" text="{path:'/meetingTime',formatter:'ssms.util.formatter.formatDateTime'}"/>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_DESCRIPTION}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
@@ -75,19 +75,15 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<UploadCollection uploadEnabled="false">
+											<UploadCollection id="ssms-document" selectionChange="onSelectionChange" mode="MultiSelect" multiple="true"
+												showSeparators="All">
 												<toolbar>
 													<OverflowToolbar id="myId">
-														<Title id="attachmentTitle"/>
 														<ToolbarSpacer/>
-														<Button id="downloadButton" text="Download" press="onDownloadAttachment" enabled="false" type="Transparent"></Button>
-														<UploadCollectionToolbarPlaceholder></UploadCollectionToolbarPlaceholder>
+														<Button id="ssms-downloadButton" icon="sap-icon://download" press="onDownloadAttachment" enabled="false" type="Transparent"></Button>
 													</OverflowToolbar>
 												</toolbar>
-												<items>
-													<UploadCollectionItem documentId="123" fileName="[Attachments]" mimeType="123{mimeType}" thumbnailUrl="{thumbnailUrl}" url="{url}"
-														enableEdit="false" enableDelete="false" visibleDelete="false" visibleEdit="false" selected="false"></UploadCollectionItem>
-												</items>
+												<items id="ssms-documentItems"></items>
 												<layoutData>
 													<l:GridData span="L10 M10 S8"/>
 												</layoutData>
@@ -107,7 +103,7 @@
 									<l:Grid defaultSpan="L4 M4 S12" class="ssmsSessionDetail_Grid" width="100%" id="ssms-editVBox" hSpacing="2" visible="false">
 										<l:content>
 											<HBox alignItems="End" justifyContent="End">
-												<Button icon="sap-icon://action" type="Transparent" tooltip="Send notification to supporter" enabled="false"/>
+												<Button icon="sap-icon://decline" type="Transparent" tooltip="Send notification to supporter" press="onDeclineSession"/>
 												<Button icon="sap-icon://save" type="Transparent" press="onEditSession"/>
 												<layoutData>
 													<l:GridData span="L12 M12 S12"/>
@@ -118,13 +114,13 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Text text="{/owner}"/>
+											<Text text="{UserModel>/displayName}"/>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_CATEGORY}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Select id = "ssms-category" width="100%" selectedKey="{/category}" >
+											<Select id="ssms-category" width="100%" selectedKey="{/category}">
 												<items>
 													<core:Item text="Business" key="Business"/>
 													<core:Item text="USA" key="USA"/>
@@ -136,28 +132,28 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<RadioButtonGroup id="ssms-radioBtn" columns="2" selectedIndex="0" class="ssmsSessionDetail_Grid_RadioButtonGroup" 
+											<RadioButtonGroup id="ssms-radioBtn" columns="2" selectedIndex="0" class="ssmsSessionDetail_Grid_RadioButtonGroup"
 												select="onCheckRadioGroup">
 												<RadioButton text="Public" selected="{/visibility}" class="ssmsSessionDetail_Grid_RadioButtonGroup"/>
-												<RadioButton text="Private" class="ssmsSessionDetail_Grid_RadioButtonGroup"/>
-												</RadioButtonGroup>
-												<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_LOCATION}:">
+												<RadioButton id="ssms-private" text="Private" class="ssmsSessionDetail_Grid_RadioButtonGroup"/>
+											</RadioButtonGroup>
+											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_LOCATION}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Input id="ssms-meetingRoom" value="{/meetingRoom}" />
+											<Input id="ssms-meetingRoom" value="{/meetingRoom}" change="onCheckLocation"/>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_STATUS}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Select  id="ssms-selectStatus" width="100%" selectedKey="{/status}" >
+											<Select id="ssms-selectStatus" width="100%" selectedKey="{/status}" change="onCheckStatus">
 												<items>
-													<core:Item text="Open" key="Open"/>
-													<core:Item text="In Progress" key="In Progress"/>
-													<core:Item text="Closed" key="Closed"/>
-													<core:Item text="Cancelled" key="Cancelled"/>
+													<core:Item id="ssms-open" text="Open" key="Open"/>
+													<core:Item id="ssms-inprogress" text="In progress" key="In progress"/>
+													<core:Item id="ssms-closed" text="Closed" key="Closed"/>
+													<core:Item id="ssms-cancelled" text="Cancelled" key="Cancelled"/>
 												</items>
 											</Select>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_WHEN}:">
@@ -165,13 +161,27 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<DateTimeInput type="DateTime" id="ssms-datetime" value="{/meetingTime}" valueFormat="yyyy-MM-ddTHH:mm:ss+0000" change="onCheckDate"/>
+											<!--DateTimeInput type="DateTime" id="ssms-datetime" value="{/meetingTime}" valueFormat="yyyy-MM-ddTHH:mm:ss+0000" change="onCheckDate"/-->
+											<HBox class="sapUiSmallMarginBottom">
+												<DatePicker id="ssms-datetime" value="{path:'/meetingTime',formatter:'ssms.util.formatter.formatDate'}" valueFormat="M/dd/yyyy"
+													displayFormat="yyyy-MM-dd" change="onCheckDate">
+													<layoutData>
+														<FlexItemData growFactor="1"/>
+													</layoutData>
+												</DatePicker>
+												<TimePicker id="ssms-timepicker" value="{path:'/meetingTime',formatter:'ssms.util.formatter.formatTime'}" valueFormat="HH:mm:ss"
+													displayFormat="hh:mm a" change="onCheckTime">
+													<layoutData>
+														<FlexItemData growFactor="1"/>
+													</layoutData>
+												</TimePicker>
+											</HBox>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_DESCRIPTION}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<TextArea  id="ssms-description" value="{/description}"  rows="3" cols="200">
+											<TextArea id="ssms-description" value="{/description}" rows="3" cols="200">
 												<layoutData>
 													<l:GridData span="L10 M10 S8"/>
 												</layoutData>
@@ -181,32 +191,19 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<UploadCollection uploadEnabled="true" id="ssms-UploadCollection" maximumFilenameLength="55" maximumFileSize="10" multiple="true"
-												instantUpload="false" change="onFileChange" fileDeleted="onFileDeleted" filenameLengthExceed="onFilenameLengthExceed"
-												fileSizeExceed="onFileSizeExceed" typeMissmatch="onTypeMissmatch" uploadComplete="onUploadComplete"
-												beforeUploadStarts="onBeforeUploadStarts">
-												<toolbar>
-													<OverflowToolbar >
-														<Title/>
-														<ToolbarSpacer/>
-														<Button text="Download" press="onDownloadAttachment" enabled="false" type="Transparent"></Button>
-														<UploadCollectionToolbarPlaceholder></UploadCollectionToolbarPlaceholder>
-													</OverflowToolbar>
-												</toolbar>
-												<items>
-													<UploadCollectionItem id="ssms-UploadCollectionItem" documentId="123" fileName="[Attachments]" mimeType="123{mimeType}"
-														thumbnailUrl="{thumbnailUrl}" url="{url}" enableEdit="false" enableDelete="true" visibleDelete="true" visibleEdit="false" selected="false"></UploadCollectionItem>
-												</items>
-												<layoutData>
+											<ssms:SSMSUploadCollection id="ssms-UploadCollection" multiple="true" instantUpload="false" fileDeleted="onFileDeleted" uploadComplete="onUploadComplete" >
+											
+												<ssms:items id="ssms-UploadCollectionItems"></ssms:items>
+												<ssms:layoutData>
 													<l:GridData span="L10 M10 S8"/>
-												</layoutData>
-											</UploadCollection>
+												</ssms:layoutData>
+											</ssms:SSMSUploadCollection>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_SUMMARY}:" TextAlign="Center">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<TextArea id="ssms-summary" value="{/summary}"  rows="3" cols="200">
+											<TextArea id="ssms-summary" value="{/summary}" change="onCheckSummary" rows="3" cols="200">
 												<layoutData>
 													<l:GridData span="L10 M10 S8"/>
 												</layoutData>
