--- a/webapp/css/common.css
+++ b/webapp/css/common.css
@@ -1,3 +1,11 @@
+html.sap-desktop .sapMBtn:focus>.sapMFocusable {
+	outline: none;
+}
+
+.sapUiView.sapUiXMLView {
+	background-color: #fff;
+}
+
 .ssmsHeader {
 	background-color: #0099CC;
 	border-bottom: none;
@@ -10,4 +18,10 @@
 .ssmsEmphasizedButton > .sapMBtnInner.sapMBtnEmphasized {
     background-color: #0099CC;
     border: none;
+}
+
+.ssmsLabel { 
+	font-size: 1.5rem;
+	text-align: center !important;
+	color: #0099CC;
 }
