--- a/webapp/view/Header.fragment.xml
+++ b/webapp/view/Header.fragment.xml
@@ -1,9 +1,15 @@
 <core:FragmentDefinition xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:ssmsLogo="ssms.control.logo" controllerName="ssms.controller.Header">
 	<Toolbar class="ssmsHeader" design="Transparent">
-		<Image tooltip="{i18n>TEXT_HEADERFRAGMENT_LOGOTOOLTIP}" class="sapUiSmallMarginTop sapUiSmallMarginBottom sapUiMediumMarginBegin" src="img/logo_small.png" press="onPressLogo" />
+		<Image tooltip="{i18n>TEXT_HEADERFRAGMENT_LOGOTOOLTIP}" class="sapUiSmallMarginTop sapUiSmallMarginBottom sapUiMediumMarginBegin"
+			src="img/logo_small.png" press="onPressLogo"/>
 		<ToolbarSpacer/>
-		<SearchField class="ssmsSearchField" width="20%" placeholder="{i18n>TEXT_HEADERFRAGMENT_SEARCHPLACEHODER}" search="onHeaderSearch"/>
-		<Button class="ssmsEmphasizedButton sapUiSmallMarginEnd sapUiMediumMarginBegin" type="Emphasized" icon="sap-icon://employee" text="{UserModel>/displayName}"
-			press="onPressUser"></Button>
+		<SearchField class="ssmsSearchField sapUiSmallMarginEnd" width="20%" placeholder="{i18n>TEXT_HEADERFRAGMENT_SEARCHPLACEHODER}"
+			search="onHeaderSearch"/>
+		<Button class="ssmsEmphasizedButton" type="Emphasized" icon="sap-icon://message-popup"
+			tooltip="{i18n>TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP}" press="onPressNotification"/>
+		<Button class="ssmsEmphasizedButton" type="Emphasized" icon="sap-icon://add-coursebook"
+			tooltip="{i18n>TEXT_HEADERFRAGMENT_NEWSESSIONTOOLTIP}" press="onPressNewSession"/>
+		<Button class="ssmsEmphasizedButton sapUiSmallMarginEnd" type="Emphasized" icon="sap-icon://employee"
+			tooltip="{i18n>TEXT_HEADERFRAGMENT_SELFCENTERTOOLTIP}" press="onPressUser"/>
 	</Toolbar>
 </core:FragmentDefinition>
