--- a/webapp/view/Header.fragment.xml
+++ b/webapp/view/Header.fragment.xml
@@ -5,11 +5,13 @@
 		<ToolbarSpacer/>
 		<SearchField class="ssmsSearchField sapUiSmallMarginEnd" width="20%" placeholder="{i18n>TEXT_HEADERFRAGMENT_SEARCHPLACEHODER}"
 			search="onHeaderSearch"/>
-		<Button class="ssmsEmphasizedButton" type="Emphasized" icon="sap-icon://message-popup"
-			tooltip="{i18n>TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP}" press="onPressNotification"/>
+		<Button class="ssmsEmphasizedButton ssmsNotification" type="Emphasized" icon="img/notification.png"
+			tooltip="{i18n>TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP}" visible="{path: '', formatter: ''}" press="onPressNotification"/>
+		<Button class="ssmsEmphasizedButton ssmsNotification-Unread" type="Emphasized" icon="img/notification-unread.png"
+			tooltip="{i18n>TEXT_HEADERFRAGMENT_NOTIFICATIONUNREADTOOLTIP}" visible="{path: '', formatter: ''}" press="onPressNotification"/>
 		<Button class="ssmsEmphasizedButton" type="Emphasized" icon="sap-icon://add-coursebook"
 			tooltip="{i18n>TEXT_HEADERFRAGMENT_NEWSESSIONTOOLTIP}" press="onPressNewSession"/>
-		<Button class="ssmsEmphasizedButton sapUiSmallMarginEnd" type="Emphasized" icon="sap-icon://employee"
+		<Button class="ssmsEmphasizedButton sapUiMediumMarginEnd" type="Emphasized" icon="sap-icon://employee"
 			tooltip="{i18n>TEXT_HEADERFRAGMENT_SELFCENTERTOOLTIP}" press="onPressUser"/>
 	</Toolbar>
 </core:FragmentDefinition>
