--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -5,7 +5,7 @@
 			<Toolbar class="ssmsHeader" design="Transparent">
 				<Image class="sapUiSmallMarginTop sapUiSmallMarginBottom sapUiSmallMarginBegin" src="img/logo_small.png"/>
 				<ToolbarSpacer/>
-				<Button class="ssmsEmphasizedButton" type="Emphasized" icon="sap-icon://message-popup" tooltip="{i18n>TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP}" press="onPressNotification"/>
+				<Button class="ssmsEmphasizedButton" type="Emphasized" icon="sap-icon://notification-2" tooltip="{i18n>TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP}" press="onPressNotification"/>
 				<Button class="ssmsEmphasizedButton sapUiSmallMarginEnd" type="Emphasized" icon="sap-icon://employee" text="{UserModel>/displayName}"
 					tooltip="{i18n>TEXT_HEADERFRAGMENT_SELFCENTERTOOLTIP}" press="onPressUser"/>
 			</Toolbar>
@@ -19,19 +19,19 @@
 					</VBox>
 				</content>
 			</Panel>
-			<HBox justifyContent="Center" class="sapUiLargeMarginTop">
+			<HBox justifyContent="Center" class="sapUiMediumMarginTop">
 				<VBox class="sapUiLargeMarginEnd ssmsHome-ContentBox">
-					<Image id="img-createSession" class="ssmsHome-ContentBox-Image" width="6rem" height="6rem" src="img/1.jpg"/>
-					<VBox id="createSession" class="sapUiSmallMarginTop ssmsHome-ContentBox-Background">
-						<Label class="ssmsLabel ssmsHome-ContentBox-Background-Label" width="100%" text="{i18n>TEXT_HOME_CREATESESSIONSUBHEADER}"/>
-						<Text class="ssmsHome-ContentBox-Background-Text" text="{i18n>TEXT_HOME_CREATESESSIONCONTENTTEXT}"/>
+					<Image id="img-createSession" class="ssmsPointer ssmsHome-ContentBox-Image" src="img/25.1.png"/>
+					<VBox id="createSession" class="sapUiSmallMarginTop ssmsPointer ssmsHome-ContentBox-Background">
+						<Label class="ssmsLabel ssmsPointer" width="100%" text="{i18n>TEXT_HOME_CREATESESSIONSUBHEADER}"/>
+						<Text class="ssmsPointer" text="{i18n>TEXT_HOME_CREATESESSIONCONTENTTEXT}"/>
 					</VBox>
 				</VBox>
 				<VBox class="sapUiLargeMarginBegin ssmsHome-ContentBox">
-					<Image id="img-sessionList" class="ssmsHome-ContentBox-Image" width="6rem" height="6rem" src="img/2.jpg"/>
+					<Image id="img-sessionList" class="ssmsPointer ssmsHome-ContentBox-Image" src="img/25.2.png"/>
 					<VBox id="sessionList" class="sapUiSmallMarginTop ssmsHome-ContentBox-Background">
-						<Label class="ssmsLabel ssmsHome-ContentBox-Background-Label" width="100%" text="{i18n>TEXT_HOME_SESSIONLISTSUBHEADER}"/>
-						<Text class="ssmsHome-ContentBox-Background-Text" text="{i18n>TEXT_HOME_SESSIONLISTCONTENTTEXT}"/>
+						<Label class="ssmsLabel ssmsPointer" width="100%" text="{i18n>TEXT_HOME_SESSIONLISTSUBHEADER}"/>
+						<Text class="ssmsPointer" text="{i18n>TEXT_HOME_SESSIONLISTCONTENTTEXT}"/>
 					</VBox>
 				</VBox>
 			</HBox>
